--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -14,4 +14,5 @@ html(ng-app="lcboApp")
     script(src='js/lib/WinJS.js')
     script(src='js/app.js')
   body
-    include partials/search.jade
+    #app
+        include partials/search.jade
