--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,7 +5,7 @@ html(ng-app="lcboApp")
     meta(name="format-detection",content="telephone=no")
     meta(name="msapplication-tap-highlight",content="no")
     meta(name="viewport",content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi")
-    title LCBO
+    title Elsie
     //link(rel='stylesheet', href='css/foundation.css')
     link(rel='stylesheet', href='css/lib/ui-dark.css')
     link(rel='stylesheet', href='css/app.css')
