--- a/src/jade/partials/results.jade
+++ b/src/jade/partials/results.jade
@@ -1,6 +1,7 @@
-#storeResultsTemplate(data-win-control="WinJS.Binding.Template")
-    .store
-        span(data-win-bind="innerText:name")
-        span(data-win-bind="innerText:address_line_1")
+#storeResultsTemplate.listBox(data-win-control="WinJS.Binding.Template")
+	.store.listItem
+		.listItem-Detail
+			h4(data-win-bind="textContent:name")
+			h6(data-win-bind="textContent:address_line_1")
 
 #storeResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}}")
