--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,5 +1,5 @@
 doctype
-html(ng-app="lcboApp")
+html
   head
     meta(charset='utf8')
     meta(name="format-detection",content="telephone=no")
@@ -15,5 +15,7 @@ html(ng-app="lcboApp")
     script(src='js/app.js')
   body
     #app
+        //include partials/brand.jade
         include partials/search.jade
+        include partials/product.jade
         include partials/results.jade
