--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -14,7 +14,6 @@ html
     script(src='js/app.js')
   body
     #app
-        //include partials/brand.jade
+        include partials/brand.jade
         include partials/search.jade
-        include partials/product.jade
         include partials/results.jade
