dev env changes

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,6 +11,9 @@ html
     script(src='js/lib/base.min.js')
     script(src='js/lib/ui.min.js')
     script(src='js/lib/WinJS.js')
+    script(src='js/_search.js')
+    script(src='js/_services.js')
+    script(src='js/_ui.js')
     script(src='js/app.js')
   body
     #app
