--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 #brand {
-    margin: 150px 10px 0;
+    //margin: 150px 10px 0;
+    margin: 10px;
     &.tucked {
         margin-top: 10px;
         text-transform: uppercase;
@@ -7,9 +8,14 @@
 }
 
 .win-searchbox {
-    margin: 10px;
-    transition: margin 0.3s;
-    width: auto;
+    margin: 2%;
+    transition: 0.5s;
+    position: fixed;
+    bottom: 0;
+    width: 96%;
+    &:focus {
+        top: 0
+    }
 }
 
 .win-searchbox-suggestion-selected {
