--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,7 +6,7 @@ html
     meta(name="msapplication-tap-highlight",content="no")
     meta(name="viewport",content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi")
     title Elsie
-    link(rel='stylesheet', href='css/lib/ui-dark.css')
+    link(rel='stylesheet', href='css/lib/ui-light.css')
     link(rel='stylesheet', href='css/app.css')
     script(src='js/lib/base.min.js')
     script(src='js/lib/ui.min.js')
