--- a/src/jade/partials/product_stores.jade
+++ b/src/jade/partials/product_stores.jade
@@ -5,4 +5,5 @@
       h6(data-win-bind="textContent:address_line_1")
 
 .elsie-title Nearby Availability
+//h2 Nearby
 #storeResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none', itemDataSource: NearbyStoresWithProduct.itemList.dataSource}")
