--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,14 @@
+body {
+    overflow: hidden;
+}
+
+#app > .pagecontrol {
+    overflow: hidden;
+}
+
 #brand {
     //margin: 150px 10px 0;
-    margin: 10px;
+    padding: 10px;
     &.tucked {
         margin-top: 10px;
         text-transform: uppercase;
@@ -16,14 +24,17 @@
 
 // win-searchbox
 .win-searchbox {
-    margin: 2%;
+    margin: 0;
+    padding: 1.5%;
     transition: 0.5s;
-    position: fixed;
-    bottom: 0;
-    width: 96%;
-    &:focus {
-        top: 0
-    }
+    position: absolute;
+    bottom: 3%;
+    width: 97%;
+}
+
+.win-searchbox-input-focus {
+    top: 0;
+    bottom: auto;
 }
 
 .win-searchbox-suggestion-selected {
@@ -77,7 +88,7 @@
         margin-left: 5%;
         float: left;
         .fact {
-            margin-top: 10px;
+            margin-bottom: 10px;
             width: 50%;
             float: left;
             .value,
