--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,11 +1,3 @@
-body {
-    overflow: hidden;
-}
-
-#app > .pagecontrol {
-    overflow: hidden;
-}
-
 #brand {
     //margin: 150px 10px 0;
     padding: 10px;
@@ -25,11 +17,11 @@ body {
 // win-searchbox
 .win-searchbox {
     margin: 0;
-    padding: 1.5%;
+    padding: 0;
     transition: 0.5s;
-    position: absolute;
-    bottom: 3%;
-    width: 97%;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .win-searchbox-input-focus {
