--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -1,2 +1,2 @@
 .box
-	#searchBoxId(data-win-control="WinJS.UI.SearchBox",data-win-options="{chooseSuggestionOnEnter: true, focusOnKeyboardInput: true, placeholderText: 'Search for a product'}")
+	#searchBoxContainer
