--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -2,15 +2,12 @@ doctype
 html
   head
     meta(charset='utf-8')
-    //meta(name="format-detection",content="telephone=no")
-    //meta(name="msapplication-tap-highlight",content="no")
-    //meta(name="viewport",content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi")
     title Elsie
     link(rel='stylesheet', href='css/lib/ui-light.css')
     link(rel='stylesheet', href='css/app.css')
-    script(src="//Microsoft.Phone.WinJS.2.1/js/base.js")
-    script(src="//Microsoft.Phone.WinJS.2.1/js/ui.js")
-    //script(src='js/lib/WinJS.js')
+    script(src="js/lib/base.js")
+    script(src="js/lib/ui.js")
+    script(src='cordova.js')
     script(src='js/app.js')
-  body
+  body(onload="onLoad()")
     #app(data-win-control="Application.PageControlNavigator",data-win-options="{home: './home.html', product: './product.html'}")
