start our own searchbox

--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -1,2 +1,6 @@
 .box
-	#searchBoxContainer
+  #searchBoxContainer.win-searchbox
+    input.win-searchbox-input(type='search', placeholder='Search for a product')
+    .win-searchbox-button(tabindex='-1', role='button')
+    .win-searchbox-flyout(style='display: none; top: 0px; touch-action: none; left: -2px;')
+      //#element__1.win-repeater.win-disposable(role='listbox', aria-live='polite')
