remove searchbox dependent methods

--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -1,6 +1,3 @@
 .box
   #searchBoxContainer.win-searchbox
-    input.win-searchbox-input(type='search', placeholder='Search for a product')
-    .win-searchbox-button(tabindex='-1', role='button')
-    .win-searchbox-flyout(style='display: none; top: 0px; touch-action: none; left: -2px;')
-      //#element__1.win-repeater.win-disposable(role='listbox', aria-live='polite')
+    input#searchBoxId.win-searchbox-input(type='search', placeholder='Search for a product')
