--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -1,3 +1,11 @@
+#productResultsTemplate.listBox(data-win-control="WinJS.Binding.Template")
+  .product.listItem
+    .listItem-Detail
+      h4(data-win-bind="textContent:name")
+      h6(data-win-bind="textContent:package")
+
+#productResults(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#productResultsTemplate'), layout : {type: WinJS.UI.ListLayout}}")
+
 .box
   #searchBoxContainer.win-searchbox
     input#searchBoxId.win-searchbox-input(type='search', placeholder='Search for a product')
