--- a/src/jade/partials/search.jade
+++ b/src/jade/partials/search.jade
@@ -1,5 +1,6 @@
 #productResultsTemplate.listBox(data-win-control="WinJS.Binding.Template")
   .product.listItem
+    img.listItem-Image(data-win-bind="src:image_thumb_url")
     .listItem-Detail
       h4(data-win-bind="textContent:name")
       h6(data-win-bind="textContent:package")
