add store view. todo: bing map

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -104,4 +104,14 @@ body {
             }
         }
     }
+    &.store {
+        .glance {
+            width: 100%;
+            margin-left: 0;
+        }
+    }
+}
+
+#store .details {
+    
 }
