--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,13 +17,17 @@ h6 {
     background-position: center top;
     width: 75%;
     min-height: 109px;
-    margin: 30% auto;
+    margin: 30% auto 10%;
     padding-top: 109px;
     text-align: center;
     &.tucked {
         margin-top: 10px;
         text-transform: uppercase;
     }
+}
+
+#status {
+    text-align: center;
 }
 
 #productResults {
