--- a/src/jade/home.jade
+++ b/src/jade/home.jade
@@ -2,5 +2,6 @@ doctype
 html
   body
     include partials/brand.jade
+    //include partials/recent.jade
     #status
     include partials/search.jade
