recent products functionality

--- a/src/jade/home.jade
+++ b/src/jade/home.jade
@@ -1,7 +1,8 @@
 doctype
 html
   body
+    include templates.jade
     include partials/brand.jade
-    //include partials/recent.jade
     #status
+    include partials/recent.jade
     include partials/search.jade
