--- a/src/jade/partials/recent.jade
+++ b/src/jade/partials/recent.jade
@@ -1,1 +1,3 @@
-#recentProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
+#recent
+  h1 recent
+  #recentProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
