--- a/src/jade/product.jade
+++ b/src/jade/product.jade
@@ -1,6 +1,7 @@
 doctype
 html
   body
+    include templates.jade
     #productPivot(data-win-control="WinJS.UI.Pivot",data-win-options="{ title: Elsie.Data.selectedProduct.name, selectedIndex: 0 }")
       .listviewpivotitem(data-win-control="WinJS.UI.PivotItem",data-win-options="{ 'header': 'details' }")
         include partials/product_details.jade
