appbar init and some layout changes to the homescreen as a result

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -19,3 +19,4 @@ html
     script(src='js/app.js')
   body(onload="window.onLoad()")
     #app(data-win-control="Application.PageControlNavigator",data-win-options="{home: './home.html', product: './product.html'}")
+    include partials/appbar.jade
