--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,9 +9,9 @@ h6 {
 #brand {
     background: url('../img/logo.png') no-repeat;
     background-size: 163px 109px;
-    background-position: center top;
-    width: 75%;
-    margin: 5% auto 10%;
+    background-position: left top;
+    width: 90%;
+    margin: 5% auto;
     padding-top: 109px;
     text-align: center;
 }
@@ -28,6 +28,7 @@ h6 {
 
 #productResults {
     margin: 56px auto 0;
+    display: none;
 }
 
 .elsie-title {
@@ -39,12 +40,11 @@ h6 {
 
 // win-searchbox
 .win-searchbox {
-    margin: 0;
+    margin: 0 auto 5%;
     padding: 0;
     transition: 0.5s;
-    position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 90%;
     height: 56px;
     transition: 0.5s;
     input {
@@ -53,8 +53,9 @@ h6 {
 }
 
 .win-searchbox-focus {
+    position: fixed;
     top: 0;
-    bottom: auto;
+    width: 100%;
 }
 
 .win-searchbox-suggestion-selected {
