--- a/src/jade/about.jade
+++ b/src/jade/about.jade
@@ -1,8 +1,9 @@
 doctype
 html
   body
+    include partials/brand.jade
     #about
-      h1 elsie
       p Designed and developed with love by Doug Estey. (http://dougestey.com)
       p Built on the lovely LCBO API by Carsten Nielsen. (http://lcboapi.com)
+      p If you love Elsie, please consider purchasing the paid version in the store to support further development.
       p Elsie and the LCBO API are not affiliated with the LCBO.
