update about msg. remove focus border on appbar toggle.

--- a/src/jade/about.jade
+++ b/src/jade/about.jade
@@ -3,7 +3,12 @@ html
   body
     include partials/brand.jade
     #about
-      p Designed and developed with love by Doug Estey. (http://dougestey.com)
-      p Built on the lovely LCBO API by Carsten Nielsen. (http://lcboapi.com)
+      p
+        | Designed and developed with love by 
+        a(href="http://dougestey.com",target="_blank") Doug Estey.
+      p 
+        | Built on the lovely 
+        a(href="http://lcboapi.com",target="_blank") LCBO API 
+        | by Carsten Nielsen. Product stock levels are served fresh daily.
       p If you love Elsie, please consider purchasing the paid version in the store to support further development.
       p Elsie and the LCBO API are not affiliated with the LCBO.
