maps loading on store view now

--- a/src/jade/partials/store_details.jade
+++ b/src/jade/partials/store_details.jade
@@ -1,5 +1,7 @@
 .details.store
   .map
+    div#mapDiv(style="position:relative; width: 100%; height:200px;")
+  br
   .glance
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1")
