--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -20,3 +20,4 @@ html
   body(onload="window.onLoad()")
     #app(data-win-control="Application.PageControlNavigator",data-win-options="{home: './home.html', product: './product.html'}")
     include partials/appbar.jade
+    script(charset="UTF-8", type="text/javascript", src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0")
