--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,7 +10,8 @@ html
     script(src="js/lib/ui.js")
     // Cordova 4.0.0
     script(src='cordova.js')
-    // Elsie 0.2
+    // Elsie 0.3
+    script(src='js/_bing.js')
     script(src='js/_navigator.js')
     script(src='js/_search.js')
     script(src='js/_services.js')
@@ -20,4 +21,3 @@ html
   body(onload="window.onLoad()")
     #app(data-win-control="Application.PageControlNavigator",data-win-options="{home: './home.html', product: './product.html'}")
     include partials/appbar.jade
-    script(charset="UTF-8", type="text/javascript", src="ms-appx:///Bing.Maps.JavaScript//js/veapicore.js")
