change the way we bring in bing

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,7 +11,7 @@ html
     // Cordova 4.0.0
     script(src='cordova.js')
     // Elsie 0.3
-    script(src='js/_bing.js')
+    script(charset="UTF-8", type="text/javascript", src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0")
     script(src='js/_navigator.js')
     script(src='js/_search.js')
     script(src='js/_services.js')
