lunchtime sprint. some colour experimentation, nearby stores, map cleanup and tons of misc.

--- a/src/jade/partials/recent.jade
+++ b/src/jade/partials/recent.jade
@@ -1,3 +1,3 @@
 #recent
-  h1 recent
+  h2 recent products
   #recentProducts(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#productResultsTemplate'), selectionMode: 'none', layout: {type: WinJS.UI.ListLayout}}")
