--- a/src/jade/partials/store_nearby.jade
+++ b/src/jade/partials/store_nearby.jade
@@ -1,1 +1,1 @@
-span This template will list nearby stores.
+#nearbyStores(data-win-control="WinJS.UI.ListView",data-win-options="{itemTemplate: select('#storeResultsTemplate'), layout : {type: WinJS.UI.ListLayout}, selectionMode: 'none', itemDataSource: NearbyStoresToStore.itemList.dataSource}")
