--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,17 +1,30 @@
+$primary-color: #9b59b6;
+$secondary-color: #444;
+$background-color: #ecf0f1;
+
 h1 {
     font-weight: 200;
+    color: $primary-color;
+}
+
+h2 {
+    font-weight: 200;
+    color: $primary-color;
 }
 
 h4 {
     font-size: 14pt;
+    color: $secondary-color;
 }
 
 h6 {
     font-size: 11pt;
+    color: $secondary-color;
 }
 
 p {
     font-size: 12pt;
+    color: $secondary-color;
 }
 
 progress {
@@ -28,18 +41,14 @@ progress {
 }
 
 #brand {
-    background: url('../img/logo.png') no-repeat;
-    background-size: 163px 109px;
-    background-position: left top;
     width: 90%;
     margin: 2.5% auto;
-    padding-top: 109px;
-    text-align: center;
+    text-align: left;
 }
 
 #mini-brand {
     display: none;
-    margin: 2%;
+    margin: 2% 5%;
 }
 
 #recent {
@@ -55,6 +64,7 @@ progress {
 #productResults {
     margin: 70px auto 0;
     display: none;
+    width: 90%;
 }
 
 #about {
@@ -67,6 +77,7 @@ progress {
     font-weight: 600;
     text-transform: uppercase;
     clear: both;
+    color: $primary-color;
 }
 
 // win-searchbox
@@ -75,7 +86,7 @@ progress {
     padding: 0;
     bottom: 0;
     width: 90%;
-    height: 56px;
+    height: 52px;
     input {
         font-size: 14pt;
     }
@@ -84,7 +95,7 @@ progress {
 .win-searchbox-focus {
     position: fixed;
     top: 40px;
-    width: 100%;
+    left: 5%;
 }
 
 .win-searchbox-suggestion-selected {
@@ -106,12 +117,14 @@ progress {
 // win-pivot
 .win-pivot-title {
     text-transform: uppercase;
+    color: $primary-color;
 }
 
 .win-pivot button.win-pivot-header,
 .win-pivot button.win-pivot-header:hover,
 .win-pivot button.win-pivot-header:hover:active {
     font-weight: 200;
+    color: $primary-color;
 }
 
 .listItem {
@@ -125,8 +138,8 @@ progress {
     .block {
         width: 50px;
         height: 42px;
-        background-color: black;
-        color: white;
+        background-color: $primary-color;
+        color: $background-color;
         margin-right: 10px;
         float: left;
         text-align: center;
@@ -160,6 +173,12 @@ progress {
             margin-bottom: 10px;
             width: 50%;
             float: left;
+            .value {
+                color: $secondary-color;
+            }
+            .key {
+                color: $primary-color;
+            }
             .value,
             .key {
                 text-transform: uppercase;
