--- a/src/jade/partials/store_details.jade
+++ b/src/jade/partials/store_details.jade
@@ -2,16 +2,16 @@
   .map
     div#mapDiv(style="position:relative; width: 100%; height:200px;")
   br
-  .glance
+  .glance.linear
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.address_line_1")
       br
-      span.key.win-type-large Address
+      span.key.win-type-large address
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.city")
       br
-      span.key.win-type-large City
+      span.key.win-type-large city
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedStore.telephone")
       br
-      span.key.win-type-large Phone
+      span.key.win-type-large phone
