--- a/src/jade/partials/product_details.jade
+++ b/src/jade/partials/product_details.jade
@@ -5,14 +5,14 @@
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.alcohol_content Elsie.Interface.convertABVtoPercentage")
       br
-      span.key.win-type-large ABV
+      span.key.win-type-large abv
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.package_unit_volume_in_milliliters")
       br
       span.key.win-type-large 
-        | ML X 
+        | ml x 
         span(data-win-bind="innerText: Elsie.Data.selectedProduct.total_package_units")
     .fact
       span.value.win-type-x-large(data-win-bind="innerText: Elsie.Data.selectedProduct.price_in_cents Elsie.Interface.convertCentsToDollars")
       br
-      span.key.win-type-large Price
+      span.key.win-type-large price
