--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -47,6 +47,7 @@ progress {
 #brand-container {
     background: $primary-color;
     margin-bottom: 20px;
+    padding-top: 15px;
 }
 
 #brand {
@@ -54,7 +55,7 @@ progress {
     margin: 0 auto;
     text-align: left;
     h1 {
-        color: $background-color;
+        color: white;
     }
 }
 
