--- a/src/jade/templates.jade
+++ b/src/jade/templates.jade
@@ -8,6 +8,9 @@
 #storeResultsTemplate.listBox(data-win-control="WinJS.Binding.Template")
   .store.listItem
     .listItem-Detail
-      .block(data-win-bind="textContent: distance_in_meters Elsie.Interface.convertMetersToKilometers")
+      h6.right(data-win-bind="textContent: distance_in_meters Elsie.Interface.convertMetersToKilometers")
+      .block
+        span.quantity(data-win-bind="textContent: quantity")
+        span.remaining units
       h4(data-win-bind="textContent:name")
       h6(data-win-bind="textContent:address_line_1")
