--- a/src/jade/about.jade
+++ b/src/jade/about.jade
@@ -4,11 +4,13 @@ html
     include partials/brand.jade
     #about
       p
-        | Designed and developed with love by 
+        | Elsie is designed and developed with love by 
         a(href="http://dougestey.com",target="_blank") Doug Estey.
       p 
-        | Built on the lovely 
-        a(href="http://lcboapi.com",target="_blank") LCBO API 
-        | by Carsten Nielsen. Product stock levels are served fresh daily.
-      p If you love Elsie, please consider purchasing the paid version in the store to support further development.
+        | She's powered by 
+        a(href="http://heycarsten.com",target="_blank") Carsten Nielsen
+        | 's stellar 
+        a(href="http://lcboapi.com",target="_blank") LCBO API
+        | . Product stock levels are served fresh daily.
+      p If you enjoy Elsie, please consider purchasing the paid version in the store to support further development.
       p Elsie and the LCBO API are not affiliated with the LCBO.
