elsie lunchtime rebrand

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,7 +1,7 @@
-$primary-color: #6f1c24; //burgundy
+$primary-color: #674172; //purple
 $secondary-color: #444; //grey
 $background-color: #ecf0f1; //white
-$highlight-color: #f68f40; //gold
+$highlight-color: #f1c40f; //sunflower
 
 body {
     background: $background-color;
