new about screen

--- a/src/jade/about.jade
+++ b/src/jade/about.jade
@@ -1,16 +1,16 @@
 doctype
 html
   body
-    include partials/brand.jade
-    #about
-      p
-        | Elsie is designed and developed with love by 
-        a(href="http://dougestey.com",target="_blank") Doug Estey.
-      p 
-        | She's powered by 
-        a(href="http://heycarsten.com",target="_blank") Carsten Nielsen
-        | 's stellar 
-        a(href="http://lcboapi.com",target="_blank") LCBO API
-        | . Product stock levels are served fresh daily.
-      p If you enjoy Elsie, please consider purchasing the paid version in the store to support further development.
-      p Elsie and the LCBO API are not affiliated with the LCBO.
+    #about-container
+      #about
+        img.wordmark(src="img/wordmark.png")
+        p
+          | Elsie is developed with love by 
+          a(href="http://dougestey.com",target="_blank") Doug Estey.
+        p 
+          | She's powered by 
+          a(href="http://heycarsten.com",target="_blank") Carsten Nielsen
+          | 's fantastic 
+          a(href="http://lcboapi.com",target="_blank") LCBO API
+          | . Product stock levels are served fresh daily.
+        p Elsie &amp; the LCBO API aren't affiliated with the LCBO.
