--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -203,7 +203,8 @@ html.win-hoverable button:enabled:hover .win-commandring {
 }
 
 .win-listview > .win-vertical .win-container {
-    margin: 10px 0;
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .win-listview .win-itembox {
